# kserving

./: .gitignore  Dockerfile.torchserve  README.md  pyproject.toml  ts_handler.py
configs/torchserve-config/: config.properties
deployment/dockercompose/: docker-compose.yml
frontend/: Dockerfile  pyproject.toml
frontend/src/frontend/: app.py
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: app.py
model/: DockerfileTS  architecture.py  base.py  data.py  preprocessing.py  pyproject.toml  train.py
model/src/model/: architecture.py  data.py  handler.py  train.py
model/src/rayruns/TorchTrainer_2024-12-23_14-11-42/: basic-variant-state-2024-12-23_14-11-43.json  experiment_state-2024-12-23_14-11-43.json  trainer.pkl  tuner.pkl
model/src/rayruns/TorchTrainer_2024-12-23_14-11-42/TorchTrainer_74398_00000_0_2024-12-23_14-11-43/: error.txt  events.out.tfevents.1734959509.DELL5LC35M3
model/src/rayruns/TorchTrainer_2024-12-23_14-17-40/: basic-variant-state-2024-12-23_14-17-40.json  experiment_state-2024-12-23_14-17-40.json  trainer.pkl  tuner.pkl
model/src/rayruns/TorchTrainer_2024-12-23_14-17-40/TorchTrainer_4971b_00000_0_2024-12-23_14-17-40/: events.out.tfevents.1734959868.DELL5LC35M3  params.json
model/src/rayruns/TorchTrainer_2024-12-23_14-34-19/: basic-variant-state-2024-12-23_14-34-19.json  experiment_state-2024-12-23_14-34-19.json  trainer.pkl  tuner.pkl
model/src/rayruns/TorchTrainer_2024-12-23_14-34-19/TorchTrainer_9c9db_00000_0_2024-12-23_14-34-19/: error.pkl  error.txt  events.out.tfevents.1734960866.DELL5LC35M3  params.pkl
model/src/rayruns/TorchTrainer_2024-12-23_14-43-07/: basic-variant-state-2024-12-23_14-43-07.json  experiment_state-2024-12-23_14-43-07.json  trainer.pkl  tuner.pkl
model/src/rayruns/TorchTrainer_2024-12-23_14-43-07/TorchTrainer_d77b3_00000_0_2024-12-23_14-43-07/: error.pkl  events.out.tfevents.1734961394.DELL5LC35M3  params.json
model/src/rayruns/TorchTrainer_2024-12-23_15-07-23/: basic-variant-state-2024-12-23_15-07-23.json  experiment_state-2024-12-23_15-07-23.json  trainer.pkl  tuner.pkl
model/src/rayruns/TorchTrainer_2024-12-23_15-07-23/TorchTrainer_3b57c_00000_0_2024-12-23_15-07-23/: error.pkl  events.out.tfevents.1734962849.DELL5LC35M3
model/src/rayruns/mlflow/643745965483794728/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/186a56d0e9f24db699cdd33d57e5f60b/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/186a56d0e9f24db699cdd33d57e5f60b/tags/: trial_name
model/src/rayruns/mlflow/643745965483794728/39c5aa5f87c448529c59891eac32bdbe/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/39c5aa5f87c448529c59891eac32bdbe/artifacts/: error.pkl  error.txt  params.pkl
model/src/rayruns/mlflow/643745965483794728/39c5aa5f87c448529c59891eac32bdbe/tags/: mlflow.runName
model/src/rayruns/mlflow/643745965483794728/58043d8cd93641ddbebf86781b30905b/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/58043d8cd93641ddbebf86781b30905b/artifacts/: error.txt
model/src/rayruns/mlflow/643745965483794728/58043d8cd93641ddbebf86781b30905b/tags/: trial_name
model/src/rayruns/mlflow/643745965483794728/6d2afa0ff1f4497db9cf7f526e003fcc/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/6d2afa0ff1f4497db9cf7f526e003fcc/artifacts/: error.pkl
model/src/rayruns/mlflow/643745965483794728/6d2afa0ff1f4497db9cf7f526e003fcc/tags/: mlflow.runName
model/src/rayruns/mlflow/643745965483794728/730da0ae899e4caa8294657cb514a3c4/: meta.yaml
model/src/rayruns/mlflow/643745965483794728/730da0ae899e4caa8294657cb514a3c4/artifacts/: error.txt
model/src/rayruns/mlflow/643745965483794728/730da0ae899e4caa8294657cb514a3c4/tags/: trial_name
notebooks/: notebook.ipynb
rayruns/TorchTrainer_2024-12-07_13-58-08/: basic-variant-state-2024-12-07_13-58-09.json  experiment_state-2024-12-07_13-58-09.json  trainer.pkl  tuner.pkl
runs/TorchTrainer_2024-12-01_17-33-14/: basic-variant-state-2024-12-01_17-33-14.json  experiment_state-2024-12-01_17-33-14.json  trainer.pkl  tuner.pkl
tests/: __init__.py
(+68 files in other folders)
