[project]
name = "kserving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch-model-archiver>=0.12.0",
    "torch-workflow-archiver>=0.2.15",
    "torchserve>=0.12.0",
]

[tool.uv.workspace]
members = ["frontend", "gateway", "model"]
