[project]
name = "kserving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "nvgpu>=0.10.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
torchserve = [
    "torch",
    "torchserve",
    "torch-model-archiver",
    "torch-workflow-archiver"
]
rayserve = [
    "ray[serve]"
]


[tool.uv.workspace]
members = ["frontend", "gateway", "model"]


