[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fahad Ahmed", email = "fahad.ahmed95@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "model",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
model = { workspace = true }
