[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fahad Ahmed", email = "fahad.ahmed95@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.18.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "ray[all]>=2.40.0",
    "torch>=2.5.1",
    "torchserve>=0.12.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
